crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-5.2__tests__template_tests__templatetags__bad_tag.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-5.2/tests/template_tests/templatetags/bad_tag.py
---
tag_rules:
  "tests.template_tests.templatetags.bad_tag::tag::badsimpletag":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
filter_arities: {}
block_specs: {}
